# uv-monorepo3

./: hello.py  pyproject.toml
src/api/: main.py  pyproject.toml
src/api/src/api/: main.py
src/domain/: pyproject.toml
src/domain/src/domain/: __init__.py
