[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "domain",
]

[project.scripts]
uv-monorepo3 = "api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
domain = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
